--- a/client/client.jade
+++ b/client/client.jade
@@ -34,7 +34,7 @@ template(name='layout')
                                 //- .ui.basic.fluid.segment
                     +yield
         unless is_frontdesk
-            +footer 
+            +footer
         +shortcut_modal
 
 template(name='mlayout')
@@ -47,7 +47,7 @@ template(name='mlayout')
 
 template(name='verification_confirmation')
     .ui.text.container
-        h1.ui.header Thank you, your email has been verified.  You may close the window. 
+        h1.ui.header your email has been verified; you may close the window. 
 
 
 
