--- a/client/staff_home.jade
+++ b/client/staff_home.jade
@@ -16,6 +16,6 @@ template(name='staff_home')
     
 template(name='staff_widget')
     .ui.header
-        +i name='dashboard'
+        i.dashboard.icon
         |staff dashboard
         
