--- a/client/buttons.jade
+++ b/client/buttons.jade
@@ -1,7 +1,7 @@
 template(name='session_edit_button')
     if currentUser
         unless is_editing
-            .edit_this.ui.blue.small.button(title="Edit #{tags}" class=button_classes)
+            .edit_this.ui.small.button(title="Edit #{tags}" class=button_classes)
                 i.pencil.icon
                 |edit
         else
@@ -19,13 +19,12 @@ template(name='detect')
 template(name='session_edit_icon')
     if currentUser
         unless is_editing
-            i.blue.pencil.link.circular.icon.edit_this(title=tags class=button_classes)
+            i.pencil.link.circular.icon.edit_this(title=tags class=button_classes)
         else
             .save_doc.ui.icon.button(class=button_classes title='save')
                 i.green.check.icon
 
 template(name='edit_button')
     a.ui.icon.compact.basic.button(href="/m/#{model}/#{_id}/edit" title='edit')
-        +i name='pencil' classes='ui inline mini image'
-        //- i.pencil.icon
+        i.pencil.icon
         
