--- a/client/home.jade
+++ b/client/home.jade
@@ -129,24 +129,6 @@ template(name='home')
         //-         +post
 
 
-template(name='shop_small')
-    .ui.large.header 
-        //- +i name='store'
-        i.shop.grey.icon
-        |for sale
-    .ui.relaxed.grey.list.smallscroll
-        each products 
-            .item
-                if image
-                    img.ui.mini.inline.image(src="{{c.url image width=300 height=300 gravity='face' crop='fill'}}")
-                if picture
-                    img.ui.mini.inline.image(src="{{c.url picture width=300 height=300 gravity='face' crop='fill'}}")
-                .ui.grey.inline.small.header 
-                    |#{title}
-                    .ui.basic.label $#{dollar_price}
-    
-
-
 
 
 
@@ -271,7 +253,7 @@ template(name='service_slider')
 
 template(name='health_club_status_small')
     div
-    .ui.inline.grey.header 
+    .ui.inline.header 
         |upper hot tub
         +water_status slug='upper_hot_tub'
         //- div
@@ -284,8 +266,10 @@ template(name='health_club_status_small')
             |#{latest_uht_reading.chlorine} chl
         .item
             |#{latest_uht_reading.when}
+        div
+        |by #{latest_uht_reading.author.username}
     div
-    .ui.inline.grey.header lower hot tub
+    .ui.inline.header lower hot tub
         +water_status slug='lower_hot_tub'
         //- div
     .ui.small.horizontal.list
@@ -297,8 +281,11 @@ template(name='health_club_status_small')
             |#{latest_lht_reading.chlorine} chl
         .item
             |#{latest_lht_reading.when}
+        div
+        |by #{latest_lht_reading.author.username}
+            
     div
-    .ui.inline.grey.header
+    .ui.inline.header
         | pool
         +water_status slug='pool'
         //- div
@@ -311,19 +298,21 @@ template(name='health_club_status_small')
             |#{latest_pool_reading.chlorine} chl
         .item
             |#{latest_pool_reading.when}
+        div
+        |by #{latest_pool_reading.author.username}
 
 
 template(name='water_status')
     if is_staff
         if on
-            i.checkmark.link.icon.toggle_status
+            i.checkmark.green.link.icon.toggle_status
         else    
-            i.ban.link.icon.toggle_status
+            i.ban.red.link.icon.toggle_status
     else
         if on
-            i.checkmark.large.icon
+            i.checkmark.green.large.icon
         else    
-            i.ban.large.icon
+            i.ban.red.large.icon
     //- with latest_reading
     //-     | #{temperature}&#8457;
     //- div
