--- a/components/commerce/shop.jade
+++ b/components/commerce/shop.jade
@@ -1,9 +1,31 @@
+template(name='products')
+    .ui.padded.grid
+        .row
+            a.ui.big.fluid.button(href='/healthclub')
+                i.left.chevron.icon
+                strong back
+        .row
+            .four.wide.column
+                .ui.header 
+                    i.wrench.grey.icon
+                    |products
+                +shop_cloud
+            .twelve.wide.column.scrolling
+                .ui.stackable.three.cards
+                    each products
+                        +product_card_template
+
+
+
+
+
+
 template(name='shop_dashboard')
     .ui.stackable.padded.grid
-        //- .three.wide.column
-        //-     .ui.header 
-        //-         +i name='shop'
-        //-         |shop
+        .three.wide.column
+            .ui.header 
+                +i name='shop'
+                |shop (beta)
         //-     .ui.fluid.button.add_item
                 i.plus.icon
         //-         |add item
@@ -129,22 +151,18 @@ template(name='product_header')
         .ui.inline.small.header #{title}
 
 
-
-
 template(name='add_to_tab')
     .ui.segment
         .add_to_tab.ui.green.button
             //- i.cart.plus.icon
-            |Add to Tab
+            |add to tab
         if current_tab_additions
-            div Current Tab Additions
+            div current tab additions
             .ui.list
                 each current_tab_additions
                     .item
                         |#{when}
                         //- i.remove.link.icon.remove_tab_item
-
-
 
 template(name='shop_card_template')
     .ui.fluid.horizontal.card
@@ -221,7 +239,6 @@ template(name='shop_card_template')
             //-                 |free
                 .hidden.content
                     //- i.cart.plus.green.large.icon
-            //- +number_viez
             if is_admin
                 +text_edit key='model' direct=true
             a.ui.basic.small.icon.button(href="/shop/#{_id}/view")
@@ -242,3 +259,38 @@ template(name='fav_button')
     i.large.link.heart.outline.icon
             
             
+template(name='shop_cloud')
+    //- #cloud
+        //- .ui.left.icon.input
+        //-     i.search.icon
+        //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
+        // .ui.hidden.fitted.divider
+    if selected_shop_tags
+        //- #clear_tags.ui.active.icon.tiny.circular.button
+        //-     i.remove.icon
+        each selected_shop_tags
+            .unselect_shop_tag.ui.active.tiny.circular.kiosk_facet_button.button
+                strong #{this}
+    each all_shop_tags
+        .ui.compact.tiny.circular.basic.button.kiosk_facet_button.select_shop_tag(class=cloud_tag_class) 
+            strong #{this.name}
+
+
+
+template(name='shop_small')
+    div
+    a.ui.fluid.button(href="/products")
+        .ui.header
+            |for sale
+    //- +shop_cloud
+    .ui.relaxed.grey.list.smallscroll
+        each products 
+            .item
+                if image
+                    img.ui.mini.inline.image(src="{{c.url image width=300 height=300 gravity='face' crop='fill'}}")
+                if picture
+                    img.ui.mini.inline.image(src="{{c.url picture width=300 height=300 gravity='face' crop='fill'}}")
+                .ui.grey.inline.small.header 
+                    |#{title}
+                    small $#{dollar_price}
+    
