--- a/components/inbox.jade
+++ b/components/inbox.jade
@@ -2,7 +2,7 @@ template(name='inbox')
     .ui.padded.stackable.grid
         .row
             .four.wide.column
-                +i name='inbox' classes='ui inline image'
+                i.inbox.icon
                 .ui.inline.header inbox
                 //- +view_notifications
             .twelve.wide.column
