--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -5,17 +5,18 @@ template(name='kiosk_container')
 
 template(name='healthclub')
     //- img.ui.fluid.image.checkin_banner(src="{{c.url 'willow' width=1000 height=1000 crop='crop'}}")
-    //- img.ui.fluid.image.checkin_banner(src="{{c.url 'frontrange' width=1000 height=600 crop='crop'}}")
+    img.ui.fluid.image.checkin_banner(src="{{c.url 'frontrange' width=1000 height=600 crop='crop'}}")
+    .ui.hidden.divider
     .ui.grid.header-wrapper
         //- +Template.dynamic template=kiosk_view
         //- .row
         //-     .six.wide.center.aligned.column
-
-        img.ui.small.centered.circular.image(src="{{c.url 'gold_run_logo' }}")
+        if rick_mode
+            img.ui.small.centered.circular.image(src="{{c.url 'gold_run_logo' }}")
         .row
             .sixteen.wide.center.aligned.column
                 .ui.big.fluid.left.icon.input
-                    input.username_search(type='text' placeholder='check in resident' autofocus)
+                    input.username_search(type='text' placeholder='check in resident (first or last name)' autofocus)
                     if is_query
                         i.remove.link.icon.clear_results
                     else 
@@ -44,57 +45,71 @@ template(name='healthclub')
                                     if is_query
                                         .ui.center.aligned.header no members found
                                         .ui.center.aligned.header see staff to add
-                    .row    
-                        .ui.padded.grid
-                            //- +inline_doc slug='health_club_notices' classes='ui large header'
-                            unless rick_mode
-                                .three.column.row
-                                    .column
-                                        +service_small
-                                    .column
-                                        +rental_small
-                                    .column
-                                        +shop_small
-                                .three.column.row
-                                    .column
-                                        +request_small
-                                    .column
-                                        +event_small
-                                    .column
-                                        .ui.large.header 
-                                            i.grey.info.icon
-                                            |hc info
-                                        .ui.header health club hours
-                                        .ui.large.list
-                                            .item mon 7a-10p
-                                            .item tues 7a-10p
-                                            .item wed 7a-10p
-                                            .item thur 7a-10p
-                                            .item fri 7a-9p
-                                            .item sat 8a-9p
-                                            .item sun 8a-10p
-                                        +health_club_status               
-                            else
-                                .row
-                                    .eight.wide.column
-                                        if is_staff
-                                            a.ui.fluid.button(href='/staff')
-                                                i.left.chevron.large.icon
-                                                i.user.shield.icon
-                                                |staff
-                                        +health_club_info
-                                    .eight.wide.column
-                                        //- .ui.inline.header www.goldrun.online
-                                        .ui.header health club hours
-                                        .ui.large.list
-                                            .item mon 7a-10p
-                                            .item tues 7a-10p
-                                            .item wed 7a-10p
-                                            .item thur 7a-10p
-                                            .item fri 7a-9p
-                                            .item sat 8a-9p
-                                            .item sun 8a-10p
-                                        +health_club_status               
+                    unless is_query
+                        .row    
+                            .ui.padded.grid
+                                //- +inline_doc slug='health_club_notices' classes='ui large header'
+                                if rick_mode
+                                    .two.column.row
+                                        .column
+                                            //- .ui.header 
+                                            //-     i.blue.info.icon
+                                            //-     |hc info
+                                            .ui.header hours
+                                            .ui.large.list
+                                                .item Mon 7a-10p
+                                                .item Tues 7a-10p
+                                                .item Wed 7a-10p
+                                                .item Thur 7a-10p
+                                                .item Fri 7a-9p
+                                                .item Sat 8a-9p
+                                                .item Sun 8a-10p
+                                            .ui.header Onsite Manager 
+                                            .ui.small.header Rick Hamp 
+                                            .ui.relaxed.large.list
+                                                .item 303-545-1787
+                                                .item goldruncondos@gmail.com
+                    
+                                        .column
+                                            +health_club_status_small
+                                        //- .column
+                                        //-     +suggestion_box
+                                else
+                                    .two.column.row
+                                        .column
+                                            .ui.header 
+                                                i.blue.info.icon
+                                                |hc info
+                                            .ui.header hours
+                                            .ui.large.list
+                                                .item mon 7a-10p
+                                                .item tues 7a-10p
+                                                .item wed 7a-10p
+                                                .item thur 7a-10p
+                                                .item fri 7a-9p
+                                                .item sat 8a-9p
+                                                .item sun 8a-10p
+                                            .ui.header Onsite Manager 
+                                            .ui.small.header Rick Hamp 
+                                            .ui.relaxed.list
+                                                .item 303-545-1787
+                                                .item goldruncondos@gmail.com
+                                        .column
+                                            +health_club_status_small
+                                        //- .column
+                                            //- +suggestion_box
+                                    .one.column.row
+                                        //- .column
+                                        //-     +service_small
+                                        .column
+                                            +rental_small
+                                        //- .column
+                                        //-     +request_small
+                                    //- .three.column.row
+                                    //-     .column
+                                    //-         +event_small
+                                    //-     .column
+                                    //-         +shop_small
 
 template(name='facet_doc_edit')
     with facet_doc
@@ -110,7 +125,7 @@ template(name='add_resident')
         .centered.row
             .eight.wide.column
                 h1.ui.center.aligned.header
-                    +i name='add'
+                    i.plus.icon
                     | resident
                 .ui.big.form
                     .field
@@ -146,7 +161,7 @@ template(name='checkin_button')
     unless is_staff
         //- unless healthclub_checkedin
         .ui.massive.compact.button.checkin.new_hc_session
-            strong.grtext #{first_initial} #{last_name}
+            strong.grtext.f8 #{first_initial} #{last_name}
         //- if healthclub_checkedin
         //- if is_staff
         //- else
