--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -16,20 +16,20 @@ template(name='staff')
                 //-     |#{checkedin_members.count} checked in members
                 +inline_doc slug='staff_notices' classes='ui small grey header'
                 a.ui.fluid.basic.button(href='/buildings')
-                    //- i.building.large.icon
-                    +i name='building' classes='ui mini inline image'
+                    i.building.large.icon
+                    //- +i name='building' classes='ui mini inline image'
                     | buildings
                 a.ui.fluid.basic.button(href='/residents')
-                    //- i.large.users.icon
-                    +i name='groups' classes='ui mini inline image'
+                    i.large.users.icon
+                    //- +i name='groups' classes='ui mini inline image'
                     | residents
                 a.ui.fluid.basic.button(href='/healthclub')
-                    //- i.large.tablet.icon
-                    +i name='android-tablet' classes='ui mini inline image'
+                    i.large.tablet.icon
+                    //- +i name='android-tablet' classes='ui mini inline image'
                     | kiosk view
     
-                +add_button model='work_order' label='work order'
-                +add_button model='communication' label='communication'
+                //- +add_button model='work_order' label='work order'
+                //- +add_button model='communication' label='communication'
                 +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
                 +add_button model='shift_checklist' label='shift checklist'
                 +unit_key_widget
@@ -37,7 +37,8 @@ template(name='staff')
                     +ismall name='water' classes='ui inline image'                
                     strong water
                 div
-                +ismall name='swim'
+                //- +ismall name='swim'
+                i.swimmer.icon
                 .ui.inline.grey.header 
                     |pool
                 each shift_pool_readings
@@ -68,8 +69,8 @@ template(name='staff')
                             .ui.basic.label #{chlorine_message}
                 .ui.hidden.divider
                 .ui.inline.grey.header 
-                    //- i.hiking.icon
-                    +i name='walking' classes='ui inline image'                
+                    i.hiking.icon
+                    //- +i name='walking' classes='ui inline image'                
                     |shift walks
                 .ui.icon.button.log_staff_walked(title='log hourly shift walk')
                     i.plus.icon    
@@ -78,20 +79,20 @@ template(name='staff')
                         .ui.header #{when}
                             i.remove.small.link.circular.icon.remove_walk(title='remove walk entry')
                 if checklist_completed
-                    +i name='todo-list' classes='ui inline image'
-                    //- i.big.green.checkmark.icon
+                    //- +i name='todo-list' classes='ui inline image'
+                    i.big.green.checkmark.icon
                     |shift checklist completed
                 else 
                     a.ui.fluid.big.button(href='/shift_checklist')
-                        //- i.large.tasks.icon
-                        +i name='to-do' classes='ui inline mini image'
+                        i.large.tasks.icon
+                        //- +i name='to-do' classes='ui inline mini image'
                         |checklist not completed
 
             .twelve.wide.column
                 .ui.fluid.accordion
                     .active.title
-                        //- i.users.large.grey.icon
-                        +i name='groups' classes='ui inline mini image'
+                        i.users.large.grey.icon
+                        //- +i name='groups' classes='ui inline mini image'
                         .ui.inline.grey.header #{checkedin_members.count} checked in members
                         i.dropdown.grey.icon
                     .active.content
@@ -106,14 +107,15 @@ template(name='staff')
                     //- .content
                     //-     +kiosk_settings
                     .grey.title 
-                        //- i.large.calendar.grey.icon
-                        +i name='calendar' classes='ui inline mini image'
+                        i.large.calendar.grey.icon
+                        //- +i name='calendar' classes='ui inline mini image'
                         .ui.grey.inline.header staff schedule
                         i.dropdown.grey.icon
                     .content
                         +schedule
                     .title
-                        +i name='chat' classes='ui inline mini image'
+                        //- +i name='chat' classes='ui inline mini image'
+                        i.large.chat.icon
                         .ui.grey.inline.header chat
                         i.dropdown.icon
                     .content
@@ -138,18 +140,18 @@ template(name='hc_session')
             with session_resident
                 if address
                     div
-                    +ismall name='marker'
-                    //- i.grey.marker.icon
+                    //- +ismall name='marker'
+                    i.grey.marker.icon
                     |#{address}
                 if building
                     div
-                        //- i.grey.building.icon
-                        +ismall name='building'
+                        i.grey.building.icon
+                        //- +ismall name='building'
                         |#{building_number}
                 if unit_number
                     div
-                        //- i.home.grey.icon
-                        +ismall name='home'
+                        i.home.grey.icon
+                        //- +ismall name='home'
                         | #{unit_number}
                 //- +number_edit key='checkins_without_gov_id' label='alter checkins without gov id' direct=true
                 //- +number_edit key='checkins_without_email_verification' label='alter checkins without email verification' direct=true
@@ -175,21 +177,21 @@ template(name='hc_session')
             //- +checkin_button
             if garden_key
                 .ui.compact.green.fluid.button.garden_key_checkout
-                    +i name='plant' classes='ui mini inline image'
-                    //- i.tree.icon
+                    //- +i name='plant' classes='ui mini inline image'
+                    i.tree.icon
                     strong garden key
                 .ui.fluid.large.button.check_in_garden_key
-                    //- i.sign.in.alternate.icon
-                    +i name='internal' classes='ui mini inline image'
+                    i.sign.in.alternate.icon
+                    //- +i name='internal' classes='ui mini inline image'
                     |check in garden key
             else
                 .ui.compact.fluid.button.garden_key_checkout
-                    +i name='plant' classes='ui mini inline image'
-                    //- i.tree.icon
+                    //- +i name='plant' classes='ui mini inline image'
+                    i.tree.icon
                     strong garden key
                 .ui.fluid.button.sign_out
-                    //- i.sign.out.alternate.icon
-                    +i name='exit' classes='ui mini inline image'
+                    i.sign.out.alternate.icon
+                    //- +i name='exit' classes='ui mini inline image'
                     |check out
             //- +boolean_edit key='active' direct=true
             //- +boolean_edit key='submitted' direct=true
@@ -204,8 +206,8 @@ template(name='hc_session')
 
 template(name='unit_key_widget')
     .ui.grey.header 
-        //- i.key.icon
-        +i name='key'
+        i.key.yellow.icon
+        //- +i name='key'
         |key lookup
     .ui.grid
         .two.column.row
@@ -270,7 +272,7 @@ template(name='schedule')
                 th sat
         tbody
             tr
-                td 7/8am-12pm
+                td 7/8a-12p
                 td 
                     +facet_staff_select tags='shift,sunday,morning'
                 td 
@@ -286,7 +288,7 @@ template(name='schedule')
                 td 
                     +facet_staff_select tags='shift,saturday,morning'
             tr
-                td 12pm-4pm
+                td 12p-5p
                 td 
                     +facet_staff_select tags='shift,sunday,afternoon'
                 td 
@@ -302,7 +304,7 @@ template(name='schedule')
                 td 
                     +facet_staff_select tags='shift,saturday,afternoon'
             tr
-                td 4pm-9/10pm
+                td 5p-9/10p
                 td 
                     +facet_staff_select tags='shift,sunday,evening'
                 td 
@@ -332,7 +334,7 @@ template(name='schedule')
                 th sat
         tbody
             tr
-                td 7/8am-4pm
+                td 7/8am-5pm
                 td 
                     +facet_staff_select tags='upcoming,shift,sunday,morning'
                 td 
@@ -348,7 +350,7 @@ template(name='schedule')
                 td 
                     +facet_staff_select tags='upcoming,shift,saturday,morning'
             tr
-                td 12pm-4pm
+                td 12pm-5pm
                 td 
                     +facet_staff_select tags='upcoming,shift,sunday,afternoon'
                 td 
@@ -364,7 +366,7 @@ template(name='schedule')
                 td 
                     +facet_staff_select tags='upcoming,shift,saturday,afternoon'
             tr
-                td 4pm-9/10pm
+                td 5pm-9/10pm
                 td 
                     +facet_staff_select tags='upcoming,shift,sunday,evening'
                 td 
