--- a/components/profile/user_edit.jade
+++ b/components/profile/user_edit.jade
@@ -9,7 +9,7 @@ template(name='user_edit')
                     //- +i name='pencil'
                     .ui.small.inline.header @#{user_from_username_param.username}
                     a.ui.big.button(href="/user/#{user_from_username_param.username}/") 
-                        //- i.checkmark.big.icon
+                        i.checkmark.big.icon
                         strong save
                     .ui.hidden.divider
                     if is_staff
