--- a/components/projects.jade
+++ b/components/projects.jade
@@ -9,9 +9,6 @@ template(name='projects')
 
 
 
-
-
-
 template(name='project_stats')
     .ui.fluid.accordion
         .title
@@ -107,8 +104,8 @@ template(name='project_update_small')
 template(name='project_edit')
     with current_doc
         .ui.stackable.padded.grid
-            .three.column.row
-                .wide.column 
+            .row
+                .four.wide.column 
                     .ui.header 
                         i.pencil.icon
                         |edit project
@@ -120,13 +117,12 @@ template(name='project_edit')
                         i.checkmark.icon
                         |save
                     +remove_button
-                    +icon_edit key='icon' label='icon' direct=true
+                    //- +icon_edit key='icon' label='icon' direct=true
                     //- +array_edit key='tags' label='tags' icon='tags' direct=true
-                .column 
+                .twelve.wide.column 
                     +text_edit key='title' label='title' icon='title' direct=true
                     +image_edit key='image' label='image' icon='image' direct=true
                     +html_edit key='description' label='description' icon='content' direct=true
-                .column 
                     +boolean_edit key='approved' label='approved' icon='approval' direct=true
                     +boolean_edit key='complete' label='complete' icon='checkmark' direct=true
                     +date_edit key='start_date' label='start date' icon='calendar' direct=true
@@ -147,12 +143,12 @@ template(name='project_layout')
                 .sixteen.wide.column
                     .ui.fluid.large.three.item.borderless.menu
                         a.item(href="/project/#{_id}/feed" class="{{isActiveRoute 'project_feed'}}") 
-                            //- i.newspaper.icon
-                            +ismall name='news'
-                            |updates
+                            i.newspaper.icon
+                            //- +ismall name='news'
+                            |summary
                         a.item(href="/project/#{_id}/finance" class="{{isActiveRoute 'project_finance'}}") 
-                            +ismall name='invoice'
-                            //- i.money.icon
+                            //- +ismall name='invoice'
+                            i.money.icon
                             |finance
                         //- a.item(href="/project/#{_id}/photos" class="{{isActiveRoute 'project_photos'}}") 
                         //-     +ismall name='image'
@@ -172,13 +168,13 @@ template(name='project_layout')
                     //-     +i name='work' classes='ui avatar image'
                     //-     |projects
                     .ui.inline.header
-                        if icon
-                            +i name=icon
+                        //- if icon
+                        //-     +i name=icon
                         +text_view key='title' label='title' direct=true
                             
             .row
                 .four.wide.column 
-                    if can_edit
+                    if is_manager
                         a.ui.fluid.button(href="/project/#{_id}/edit")
                             i.pencil.icon
                             |edit
@@ -197,13 +193,13 @@ template(name='project_layout')
                                 //-     .ui.label #{this}
                                 //- +array_view key='tags' label='tags' icon='tags' direct=true
                             .item
-                                +number_view key='end_cost' label='end cost' direct=true
+                                +number_view key='end_cost' label='end cost' direct=true prefix='$'
                             .item
                                 +date_view key='end_date_actual' label='end date (actual)' direct=true
                             .item
                                 +image_view key='image' icon='image' label='image' direct=true
                             .item
-                                +number_view key='budget' label='budget' direct=true
+                                +number_view key='budget' label='budget' direct=true prefix='$'
                     //- +voting_full
                     //- .ui.small.header #{views} views
                     //- +viewing
@@ -244,7 +240,6 @@ template(name='project_files')
     
 template(name='project_change_orders')
     .ui.header 
-        +i name='change'
         | change orders
     .ui.small.header budget
     .ui.small.header expenses
@@ -254,39 +249,30 @@ template(name='project_chat')
     +comments
     
 template(name='project_finance')
-    .ui.header 
-        //- +i name='money'
-        |budget
-    .ui.two.column.grid
-        .column
-            +project_change_orders
-        .column
-            div
-            +ismall name='invoice' classes='ui middle aligned image'
-            .ui.inline.header
-                |payments 
-            if is_manager
-                .ui.small.icon.button.add_payment
-                    i.plus.icon
-            .ui.list
-                each payments
-                    if is_editing
-                        +text_edit key='recipient' direct=true
-                        +float_edit key='amount' direct=true
-                        +date_edit key='payment_date' direct=true
+    .ui.inline.header
+        |payments 
+    if is_manager
+        .ui.small.icon.button.add_payment
+            i.plus.icon
+    .ui.list
+        each payments
+            if is_editing
+                +text_edit key='recipient' direct=true
+                +float_edit key='amount' direct=true
+                +date_edit key='payment_date' direct=true
+                +session_edit_icon
+                +remove_button
+            else
+                .item 
+                    .content #{recipient} $#{amount} #{payment_date}
                         +session_edit_icon
-                        +remove_button
-                    else
-                        .item 
-                            .content #{recipient} $#{amount} #{payment_date}
-                                +session_edit_icon
-            div
-            .ui.inline.header
-                |totals
-            if is_manager
-                i.circular.refresh.icon(title='refresh')
-            with current_doc
-                |$#{payment_total}
+    div
+    .ui.inline.header
+        |totals
+    if is_manager
+        i.circular.refresh.icon(title='refresh')
+    with current_doc
+        |$#{payment_total}
 
 template(name='project_photos')
     .ui.header 
@@ -298,7 +284,6 @@ template(name='project_photos')
 
 template(name='project_feed')
     .ui.inline.header 
-        +i name='rss'
         |activity    
     if is_manager
         .ui.button.add_update
@@ -306,21 +291,31 @@ template(name='project_feed')
             |update
     .ui.feed
         each updates
-            .event
-                .label
-                    img.ui.avatar.image(src="{{c.url author.kiosk_photo width=300 height=300 gravity='face' crop='fill'}}")
-                .content
-                    //- .summary
-                    .ui.small.inline.header.user #{author.username} 
-                    //- |added
-                    //- .date posted #{when}
-                    &nbsp;
-                    .ui.inline.header {{ med_date update_date }}
-                    .extra.text !{text}
-                    //- .meta
-                    //-     +voting_small
-                    if is_admin
-                        +remove_button
+            +update_item
+            
+            
+template(name='update_item')
+    if is_editing
+        +html_edit key='text' label='description' direct=true
+        +date_edit key='update_date' label='update date' direct=true
+        +session_edit_button
+    else
+        .event
+            .label
+                img.ui.avatar.image(src="{{c.url author.kiosk_photo width=300 height=300 gravity='face' crop='fill'}}")
+            .content
+                //- .summary
+                .ui.small.inline.header.user #{author.username} 
+                //- |added
+                //- .date posted #{when}
+                |&nbsp;
+                .ui.inline.header {{ med_date update_date }}
+                .extra.text !{text}
+                //- .meta
+                //-     +voting_small
+                if is_manager
+                    +session_edit_button
+                    +remove_button
 
 
 
